--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ background-origin: border-box;
 .audio{
     margin: 50px auto;
     width:100%;
-    height:100%;
+    height:89%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -25,21 +25,21 @@ background-origin: border-box;
 }
 
 .ads1{
-    height:220px;
+    height:200px;
     border-radius: 30px;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
     -ms-border-radius: 30px;
     -o-border-radius: 30px;
-    background-image: url("../img/download.jfif");
+    background-image: url("../img/download12.jfif");
     background-repeat: no-repeat;
     background-size: cover;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
     
 }
 
 .ads1-1{
-    height:220px;
+    height:200px;
     text-align: center;
     padding-top: 50px;
     color: rgb(54, 38, 196);
@@ -58,7 +58,7 @@ background-origin: border-box;
 }
 
 .ads2{
-    height:220px;
+    height:200px;
     border-radius: 30px;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
@@ -67,10 +67,10 @@ background-origin: border-box;
     background-image: url("../img/download1.jfif");
     background-repeat: no-repeat;
     background-size: cover;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
 }
 .ads2-1{
-    height:220px;
+    height:200px;
     text-align: center;
     padding-top: 50px;
     color: rgb(54, 38, 196);
@@ -87,7 +87,7 @@ background-origin: border-box;
     background:  rgba(232, 232, 238, 0.568);
 }
 .ads3{
-    height:220px;
+    height:200px;
     border-radius: 30px;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
@@ -99,7 +99,7 @@ background-origin: border-box;
     background-color: rgb(103, 103, 124);
 }
 .ads3-1{
-    height:220px;
+    height:200px;
     text-align: center;
     padding-top: 50px;
     color: rgb(54, 38, 196);
@@ -128,7 +128,7 @@ background-origin: border-box;
 
 */
 .ads4{
-    height:220px;
+    height:200px;
     border-radius: 30px;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
@@ -138,9 +138,10 @@ background-origin: border-box;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: rgb(103, 103, 124);
+    margin-bottom: 15px;
 }
 .ads4-1{
-    height:220px;
+    height:200px;
     text-align: center;
     padding-top: 50px;
     color: rgb(54, 38, 196);
@@ -159,7 +160,7 @@ background-origin: border-box;
 
 
 .ads5{
-    height:220px;
+    height:200px;
     border-radius: 30px;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
@@ -169,9 +170,11 @@ background-origin: border-box;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: rgb(103, 103, 124);
+    margin-bottom: 15px;
+
 }
 .ads5-1{
-    height:220px;
+    height:200px;
     text-align: center;
     padding-top: 50px;
     color: rgb(54, 38, 196);
@@ -189,7 +192,7 @@ background-origin: border-box;
 }
 
 .ads6{
-    height:220px;
+    height:200px;
     border-radius: 30px;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
@@ -201,7 +204,7 @@ background-origin: border-box;
     background-color: rgb(103, 103, 124);
 }
 .ads6-1{
-    height:220px;
+    height:200px;
     text-align: center;
     padding-top: 50px;
     color: rgb(54, 38, 196);
