--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ background-origin: border-box;
     background-repeat:no-repeat;
     background-size: cover;
 }
+.main{
+    display: flex;
+    flex-direction: row;
+}
 #img{
     position:relative;
 }
@@ -222,4 +226,53 @@ background-origin: border-box;
 }
 
 
+@media (min-width: 200px) and (max-width: 990px)
+{
+.main{
+    display: flex;
+    flex-direction: column;
+}
+
+h2{
+font-size:x-large;
+}
+h3{
+    font-size:large;
+
+}
+h5{
+    font-size:small;
+ 
+}
+    p{
+        font-size:6px;
+    }
+
+    .ads1{
+        height:200px;
+        border-radius: 30px;
+        -webkit-border-radius: 30px;
+        -moz-border-radius: 30px;
+        -ms-border-radius: 30px;
+        -o-border-radius: 30px;
+        background-image: url("../img/download12.jfif");
+        /* background-repeat: no-repeat; */
+        background-size: cover;
+        margin-bottom: 15px;
+        
+    }
+    .ads2{
+        height:200px;
+        border-radius: 30px;
+        -webkit-border-radius: 30px;
+        -moz-border-radius: 30px;
+        -ms-border-radius: 30px;
+        -o-border-radius: 30px;
+        background-image: url("../img/download1.jfif");
+        background-repeat: no-repeat;
+        background-size:cover;
+        margin-bottom: 15px;
+    }
+    
+}
 
